# checker

./: .gitignore  CMakeLists.txt  class_inheritance_test.cpp  main.cpp  name_length_test.cpp  test_name.cpp
